2011-10-11  Alexey Proskuryakov  <ap@apple.com>

        Build fix.

        * WebCore.exp.in: Export GraphicsContext::clearShadow().

2011-10-10  Adam Klein  <adamk@chromium.org>

        [MutationObservers] Add stub implementation of WebKitMutationObserver
        https://bugs.webkit.org/show_bug.cgi?id=68949

        Reviewed by Ryosuke Niwa, Oliver Hunt, and Dimitri Glazkov.

        See https://bugs.webkit.org/show_bug.cgi?id=68729 for the metabug.

        This patch adds a stub WebKitMutationObserver and its supporting classes
        MutationCallback and MutationObserverOptions.
        No implementation is provided for the all-important observe() and
        disconnect() methods.

        Note that WebKitMutationObserver is vendor-prefixed since it has a
        constructor exposed on DOMWindow.  None of the rest of the API needs
        prefixing, as it's only available via a call through a MutationObserver
        callback (created by instantiating WebKitMutationObserver).

        Given the number of files required to get just the stub up and running,
        it seems reasonable to leave the actual implementation for the next
        patch (or more likely several patches).  I've left FIXMEs in all the places
        that'll need augmentation.

        Tests: fast/mutation/mutation-observer-constructor.html
               fast/mutation/observe-exceptions.html

        * CMakeLists.txt:
        * DerivedSources.cpp:
        * DerivedSources.make:
        * GNUmakefile.list.am:
        * UseJSC.cmake:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSDictionary.h:
        (WebCore::JSDictionary::tryGetProperty):
        * bindings/js/JSMutationCallbackCustom.cpp: Added.
        (WebCore::JSMutationCallback::handleEvent):
        * bindings/js/JSWebKitMutationObserverCustom.cpp: Added.