@@ -1,3 +1,15 @@
+2011-10-11  Claudio Saavedra  <csaavedra@igalia.com>
+
+        [GTK] GtkAuthenticationDialog: use GtkGrid instead of GtkTable
+        https://bugs.webkit.org/show_bug.cgi?id=69749
+
+        Reviewed by Martin Robinson.
+
+        * platform/gtk/GtkAuthenticationDialog.cpp:
+        (WebCore::addEntryToGrid): Migrate to GtkGrid when using GTK+ 3
+        (WebCore::GtkAuthenticationDialog::GtkAuthenticationDialog):
+        Ditto.
+
 2011-10-11  Alexey Proskuryakov  <ap@apple.com>
 
         Build fix.
